fixed fonts and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,12 +273,12 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 2em;
     margin-top: 0;    /* 3b, 3c */
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 1.5em;
 }
 
 /* font styles the code on google fonts I was told to paste in */
